# Smart-Buket-Analyticts

./: .gitignore  README.md
contracts/: commercial-events.md  event-core.schema.json  event-envelope.schema.json  event-prompt-maestro.schema.json  geo-ping.example.json
docs/: admin-zoning.md  audit-prompt-maestro-2026-01-25.md  events-p2.md  pets-v1.1.md  places.md  plan-prompt-maestro-2026-01-25.md  retention-and-privacy.md  topics-and-partitioning.md
docs/runbooks/: README.md  dlq.md  outbox.md  postgres.md  (+2 more)
examples/: places.sample.geojson
infra/: docker-compose.yml  init.sql  prometheus.docker.yml  prometheus.yml
libs/sb_common/: config.py  db.py  event_minimal.py  pyproject.toml
libs/sb_common/sb_common/: __init__.py  auth.py  config.py  db.py  event_minimal.py  hardening.py  metrics.py  observability.py  privacy.py  rate_limit.py  schema.py
scripts/: README.md  _run-service.ps1  check_customer360.py  cloudbuild-bootstrap.ps1  cloudbuild-submit.ps1  cloudrun-build-and-deploy.ps1  debug_customer360_call.py  demo-customer360.ps1  demo-flow.ps1  demo-places.ps1  e2e-smoke.ps1  import-admin-areas.ps1  import-places.ps1  import_admin_areas.py  import_places.py  metabase-archive-duplicate-dashboards.ps1  metabase-bootstrap.ps1  metabase-create-starter-dashboard.ps1  metabase-reset-dev.ps1  prune_data.py  restart-all.cmd  restart-query.cmd  restart-query.ps1  run-all.ps1  status.ps1  stop-all.ps1  terraform-validate-local.ps1  verify-aggregates-openapi.cmd
tests/: test_outbox_publisher_hooks.py  test_processor_message_handler_hooks.py  test_strict_envelope.py
(+38 files in other folders)
